# ws-django-suit

./: pyproject.toml
suit/static/suit/less/ui/: list.less  pagination.less
suit/templates/admin/: actions.html  pagination.html
